# allow-list-app

./: .gitignore  .pylintrc  Pipfile  README.md  allowlistapp.py  ipallowist.conf  pyproject.toml  settings.json  settings.yml
.github/workflows/: check.yml  check_types.yml  ruff.yml  test.yml
allowlist/: __init__.py  ala_auth.py  ala_database.py  ala_logger.py  ala_settings.py  allowlist.py  allowlist_app_nginx.py  allowlist_handler.py  auth.py  database.py  logger.py  settings.py
allowlist/static/: allowlist.css  allowlist.js  result.js  zy.css
allowlist/templates/: home.html.j2  result.html.j2
allowlistapp/: __init__.py  al_handler.py  al_handler_nginx.py  ala_auth.py  ala_auth_types.py  config.py  database.py  logger.py
allowlistapp/static/: allowlist.js
allowlistapp/templates/: home.html.j2  nginx.conf.j2
app/: __init__.py  allowlist.py  auth.py  logger.py  settings.py
static/: allowlist.css
templates/: home.html.j2  result.html.j2
tests/: conftest.py  test__no_pollution.py  test_ala_auth_static.py  test_ala_auth_url.py  test_blueprint_one.py  test_config.py  test_config_unit.py  test_database.py  test_home.py  test_logger.py  test_logger_unit.py  test_nginx.py  test_nginx_unit.py
tests/configs/: invalid.toml  invalid_allowed_subnets.toml  invalid_log_level.toml  invalid_static_auth_no_password.toml  invalid_url_auth_type.toml  invalid_url_auth_url.toml  logging_invalid_log_level.toml  logging_path_invalid.toml.j2  logging_path_valid.toml.j2  nginx_valid.toml  no_password.toml  testing_false_valid.toml  testing_true_valid.toml  testing_url.toml  testing_url_invalid.toml  testing_url_valid.toml  valid_allowed_subnets.toml  valid_allowed_subnets_duplicate.toml  valid_nginx.toml  valid_no_revert_daily.toml  valid_testing_false.toml  valid_testing_static_auth.toml  valid_testing_true.toml  valid_url_auth_url.toml
tests/db/: invalid.csv  valid.csv
