[tool.poetry]
name = "allowlistapp"
version = "0.1.0"
description = "Flask webapp to allowlist IPs on nginx"
authors = ["Kieran Gee <kieran.lost.the.game@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
argon2-cffi = "^23.1.0"
waitress = "^3.0.0"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
pylance = "^0.10.15"
ruff = "^0.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
cache-dir = "~/.cache/ruff"
target-version = "py311"
line-length = 120

[tool.ruff.lint]
extend-fixable = ["B", "I001"]
select = [
    "ALL", # include all the rules, including new ones
]
ignore = [
    #### modules
    "DJ",  # django
    "PTH", # KG builtin-open is fine

    #### specific rules
    # "E402",   # false positives for local imports
    # "TRY003", # external messages in exceptions are too verbose
    # "FIX002", # too verbose descriptions of todos
    "DTZ005", # KG no need to specify timezone
    "DTZ011", # KG no need to specify timezone
    "TD002", # KG only I work on this project
    "TD003", # KG only I work on this project
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = 40
