[tool.poetry]
name = "allowlist"
version = "0.1.1"
description = "Flask webapp to allowlist IPs on nginx"
authors = ["Kieran Gee <kieran.lost.the.game@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = true

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
argon2-cffi = "^23.1.0"
waitress = "^3.0.0"
pyyaml = "^6.0.1"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
pylance = "^0.10.18"
ruff = "^0.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
cache-dir = "~/.cache/ruff"
target-version = "py311"
line-length = 120

[tool.ruff.lint]
extend-fixable = ["B", "I001"]
select = ["ALL"] # include all the rules, including new ones
ignore = [
    # Modules
    "DJ",  # Django
    "PTH", # KG builtin-open is fine

    # Specific rules
    "ANN101", # KG Why define self...
    "DTZ005", # KG no need to specify timezone
    "DTZ011", # KG no need to specify timezone
    "TD002", # KG Verbose TODO, only I work on this project
    "TD003", # KG Verbose TODO, only I work on this project
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = 40
